tests/ui/error-codes/E0164.stderr
error[E0164]: expected tuple struct or tuple variant, found associated constant `Foo::B`
  --> $DIR/E0164.rs:9:9
   |
LL |         Foo::B(i) => i,
   |         ^^^^^^^^^ not a tuple struct or tuple variant

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0164`.
